# aidoku-community-sources

./: index.html  index.json  index.min.json
.github/workflows/: build.yaml
sources/: ar.aasq-v1.aix  ar.aresmanga-v4.aix  ar.azoramanga-v1.aix  ar.mangasol-v2.aix  ar.onma-v1.aix  ar.ozulscans-v2.aix  ar.reaperscansar-v2.aix  ar.swatmanga-v4.aix  bg.utsukushii-v1.aix  en.acescans-v2.aix  en.anigliscans-v1.aix  en.arcrelight-v2.aix  en.assortedscans-v2.aix  en.astrascans-v1.aix  en.coloredmanga-v10.aix  en.comiconlinefree-v1.aix  en.cosmicscans-v3.aix  en.dankefurslesen-v1.aix  en.disasterscans-v3.aix  en.dynastyscans-v2.aix  en.fallen-angels-v1.aix  en.firstkissmanga-v2.aix  en.freakscans-v1.aix  en.guya-v1.aix  en.hachirumi-v1.aix  en.hentai2read-v1.aix  en.hentaifox-v2.aix  en.hiperdex-v3.aix  en.hscans-v3.aix  en.kumascans-v3.aix  en.lhtranslation-v4.aix  en.lilymanga-v7.aix  en.lscomic-v1.aix  en.luminousscans-v8.aix  en.mangabat-v1.aix  en.mangabob-v1.aix  en.mangafox-v3.aix  en.mangairo-v1.aix  en.mangakatana-v3.aix  en.manganato-v1.aix  (+115 more)
src/rust/fr.scantrad/: Cargo.toml  build.ps1
src/rust/fr.scantrad/res/: filters.json  source.json
src/rust/fr.scantrad/src/: helper.rs  lib.rs
src/rust/multi.asurascans/: Cargo.toml
src/rust/multi.asurascans/res/: filters.json  source.json
src/rust/multi.asurascans/src/: helper.rs  lib.rs  parser.rs
src/rust/multi.cubari/: Cargo.toml
src/rust/multi.cubari/crates/cubari/src/: lib.rs
src/rust/multi.cubari/res/: source.json
src/rust/multi.cubari/src/: database.rs  helper.rs  lib.rs
